# tnsr-research-station

./: .gitignore  Cargo.toml  README.md
crates/station-kernel/: Cargo.toml
crates/station-kernel/runs/run-01KQ3R5X1JBX9XDWVPA7YM3Y0F/: events.jsonl
crates/station-kernel/runs/run-01KQ3R5X1KMAQ0KNAWAJP28V6F/: events.jsonl
crates/station-kernel/runs/run-01KQ3R5X1M21YYHW1KM5CSJ424/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R5X1MYASJEBCPF9SZP9ZB/: events.jsonl
crates/station-kernel/runs/run-01KQ3R5X232PYEEMBNZG7CP54D/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R5X245WD0QQPJ035NKA5T/: manifest.json
crates/station-kernel/runs/run-01KQ3R5X24BV6STM1GAYQ487DR/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R5X24HP9JX7QJ48T7E9RG/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R5X2791Y750FC60A7NYBG/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R5X27BK0KR0SK3QR9GX3D/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R5X27BZW88ZDKHHBAWA9B/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R61N1ESZ5AYAVC6WBXWS3/: events.jsonl
crates/station-kernel/runs/run-01KQ3R61N20JWFHQFH88TMAT75/: events.jsonl
crates/station-kernel/runs/run-01KQ3R61N39KZZPM2WCXVB1G74/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R61N3C7XNRC1ZT6AC0AFA/: events.jsonl
crates/station-kernel/runs/run-01KQ3R61NJ98EE6HH15E36M7SS/: manifest.json
crates/station-kernel/runs/run-01KQ3R61NJAPE44TPR1EFBW9EY/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R61NJMTFC534Q9VBZ0EWT/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R61NJYT4K9G228GDT8HCX/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R61NN1JWDG2R6BANVF5AT/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R61NN5NX89ADQTDGDX7SZ/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3R61NPKY8T0JQQEV0CHQ0Y/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFBRCX0FMHEH8FR0J8YHJ/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFBRDF6V5QQ9VZ491RX5Q/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFBRDWRGP06EM2RQS5NHD/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFBRDXSXKR5BMHJ20R2KA/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFBRW9K1VFG0093M82RCT/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFBRX21N2EWYFBE3BP9YQ/: manifest.json
crates/station-kernel/runs/run-01KQ3RFBRX8T6VQ6SFZH9E68HF/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFBRXB82XGP3J3V263AK8/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFBS0A3BMX7XP727G6H63/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFBS0NC80KSB2XWB135VX/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFBS2XW441S80E8DZ388G/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFGAAPYQRQQKEN2T34KZ4/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFGABA7GBKZHAJQEZJHZZ/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFGABKHMXDFWSHV2N270Q/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFGAC1SX7K669C6PF7H0B/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFGATZNVT4C7PEYFME7AQ/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFGAV8N1AE0B0061TJ1KH/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFGAVN7SRVYVVP5A3PVSJ/: manifest.json
crates/station-kernel/runs/run-01KQ3RFGAVNE8SYMSP1SN6NPCE/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFGAY482PHCNFBFD919MQ/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFGAYAZXFXF9S322RK5K6/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFGAYKFY7DZTTPHGYWM6Z/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFMNM1F9BRJ3ZJV1S3A47/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFMNNDW3458EGFBRQ9E0D/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFMNP1Z2BFV6BB7J0JZ3V/: events.jsonl
crates/station-kernel/runs/run-01KQ3RFMNPHT0NBP7WCYGQ7AM1/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFMPD4TB1MAA22D24XG53/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFMPDZMG4HTQS23Y5JM0V/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFMPETQ4XD68G499CW52V/: manifest.json
crates/station-kernel/runs/run-01KQ3RFMPF94FQ5AXPZ3JFPBNM/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFMPHCEV8TMEVHDVVD10C/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFMPHG0G5M8XQE0X64HCR/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RFMPJSFRCP0CEJCK0PABR/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RHBSJZ105DFMZ1E6RA0ZB/: events.jsonl
crates/station-kernel/runs/run-01KQ3RHBSK2N94W37KCYK26M6M/: events.jsonl
crates/station-kernel/runs/run-01KQ3RHBSKHT9W244G9FM4T8WH/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RHBSKXFKN4A0R5586ANJD/: events.jsonl
crates/station-kernel/runs/run-01KQ3RHBT2308DXM926Z02FA0V/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RHBT27MA336YC3BRJ1FHM/: events.jsonl  manifest.json
crates/station-kernel/runs/run-01KQ3RHBT2XZTY23GSENGPH4V0/: manifest.json
crates/station-kernel/runs/run-01KQ3RHBT4VNXF8SS7D0YCSDH9/: events.jsonl  manifest.json
crates/station-kernel/src/: admission.rs  closure.rs  context.rs  errors.rs  lib.rs  main.rs  runtime.rs
crates/station-kernel/tests/: declarative_files_test.rs  echo_subprocess_integration.rs  integration_test.rs  kernel_closure.rs
crates/station-policy/: Cargo.toml
crates/station-policy/src/: lib.rs
crates/station-replay/: Cargo.toml
crates/station-replay/src/: lib.rs
crates/station-supervisor/: Cargo.toml
crates/station-supervisor/src/: lib.rs
crates/station-transport/: Cargo.toml
crates/station-transport/src/: lib.rs
plugins/: echo-producer.plugin.json  rag.plugin.json  (+2 more)
(+62 files in other folders)
