[workspace]
members = [
  "crates/runtime-core",
  "crates/plugin-registry",
  "crates/artifact-ledger",
  "crates/bridge-browser",
  "crates/bridge-gpui",
  "crates/adapter-quantum",
  "crates/adapter-rag",
  "crates/station-telemetry",
  "crates/station-replay",
  "crates/station-supervisor",
  "crates/station-kernel",
  "crates/station-schema",
  "crates/station-policy",
  "crates/station-run",
  "crates/station-transport"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
