[package]
name = "station_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adapter_quantum = { path = "../adapter-quantum" }
artifact_ledger = { path = "../artifact-ledger" }
bridge_browser = { path = "../bridge-browser" }
bridge_gpui = { path = "../bridge-gpui" }
plugin_registry = { path = "../plugin-registry" }
runtime_core = { path = "../runtime-core" }
station_replay = { path = "../station-replay" }
station_policy = { path = "../station-policy" }
station_supervisor = { path = "../station-supervisor" }
station_schema = { path = "../station-schema" }
station_telemetry = { path = "../station-telemetry" }
station_run = { path = "../station-run" }
station_transport = { path = "../station-transport" }
serde_json = "1"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
station_replay = { path = "../station-replay", features = ["debug-hooks"] }

[features]
default = []
subprocess = ["station_transport/subprocess"]
