[package]
name = "station_policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plugin_registry = { path = "../plugin-registry" }
runtime_core = { path = "../runtime-core" }
station_schema = { path = "../station-schema" }
station_supervisor = { path = "../station-supervisor" }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
