[package]
name = "station_replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runtime_core = { path = "../runtime-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
libc = "0.2"
ulid = "1"
