[package]
name = "station_supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plugin_registry = { path = "../plugin-registry" }
runtime_core = { path = "../runtime-core" }
station_run = { path = "../station-run" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
