[package]
name = "station_transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runtime_core = { path = "../runtime-core" }
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "io-util", "sync"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[features]
default = []
subprocess = ["tokio"]
websocket = ["tokio", "tokio-tungstenite"]
grpc = ["tokio", "tonic", "prost"]
connectrpc = ["tokio"]
pyro5 = []
ffi = []

[dev-dependencies]
serde_json = "1.0"
